<?xml version="1.0" encoding="utf-8"?>
<com.kleytonpascoal.movies.widget.BaseRecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movies_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>